--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: linear-gradient(to right, #f8d7da, #f5c6cb, #f9e6e8);
+            background: linear-gradient(to right, #002f6c, #00509e, #0073e6, #5dade2);
             margin: 0;
             padding: 0;
             display: flex;
@@ -24,7 +24,7 @@
             max-width: 400px;
         }
         h1 {
-            color: #721c24;
+            color: #e22609;
         }
         input[type="file"] {
             padding: 10px;
@@ -32,7 +32,7 @@
         }
         .btn {
             padding: 10px 20px;
-            background-color: #721c24;
+            background-color: #002f6c;
             color: white;
             border: none;
             border-radius: 5px;
@@ -40,13 +40,13 @@
             margin-top: 20px;
         }
         .btn:hover {
-            background-color: #f5c6cb;
+            background-color: #00509e;
         }
         .result {
             margin-top: 20px;
             font-size: 18px;
             font-weight: bold;
-            color: #721c24;
+            color: #002f6c;
         }
         img {
             max-width: 100%;
