--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,9 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: linear-gradient(to right, #002f6c, #00509e, #0073e6, #5dade2);
+            background: linear-gradient(-45deg, #002f6c, #00509e, #0073e6, #5dade2);
+            background-size: 400% 400%;
+            animation: gradientBG 8s ease infinite;
             margin: 0;
             padding: 0;
             display: flex;
@@ -16,6 +18,13 @@
             height: 100vh;
             text-align: center;
         }
+
+        @keyframes gradientBG {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
         .container {
             background-color: rgba(255, 255, 255, 0.8);
             border-radius: 10px;
@@ -23,13 +32,16 @@
             width: 90%;
             max-width: 400px;
         }
+
         h1 {
             color: #e22609;
         }
+
         input[type="file"] {
             padding: 10px;
             font-size: 16px;
         }
+
         .btn {
             padding: 10px 20px;
             background-color: #002f6c;
@@ -39,15 +51,18 @@
             cursor: pointer;
             margin-top: 20px;
         }
+
         .btn:hover {
             background-color: #00509e;
         }
+
         .result {
             margin-top: 20px;
             font-size: 18px;
             font-weight: bold;
             color: #002f6c;
         }
+
         img {
             max-width: 100%;
             height: auto;
@@ -67,7 +82,6 @@
             <div class="result">
                 <p>Sonuç: <strong>{{ prediction|round(2) }}%</strong></p>
                 <p style="color: {{ 'red' if prediction > 50 else 'green' }}">{{ 'Dikkat: Kötü Huylu Olabilir' if prediction > 50 else 'Risk Taşımıyor' }}</p>
-                
             </div>
         {% endif %}
     </div>
