--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Cilt Kanseri Tahmini</h1>
+        <h1>Cilt Kanseri Tarama Sistemi</h1>
         <form action="/" method="post" enctype="multipart/form-data">
             <input type="file" name="file" required>
             <button type="submit" class="btn">Tahmin Et</button>
