--- a/templates/index.html
+++ b/templates/index.html
@@ -25,13 +25,14 @@
         100% { background-position: 0% 50%; }
     }
 
-    .container {
-        background-color: rgba(255, 255, 255, 0.8);
-        border-radius: 10px;
-        padding: 20px;
-        width: 90%;
-        max-width: 400px;
-    }
+.container {
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 10px;
+    padding: 20px;
+    width: 90%;
+    max-width: 400px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.6); /* Gölgelendirme ekleme */
+}
 
     h1 {
         color: #e22609;
