--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
     }
 
 .container {
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgba(255, 255, 255, 0.4);
     border-radius: 10px;
     padding: 20px;
     width: 90%;
@@ -35,7 +35,7 @@
 }
 
     h1 {
-        color: #e22609;
+        color: #000000;
     }
 
     input[type="file"] {
