--- a/templates/index.html
+++ b/templates/index.html
@@ -67,12 +67,12 @@
 
         #image {
             max-width: 100%;
-            max-height: 300px; /* Resim önizleme alanını sınırlama */
+            max-height: 300px;
         }
 
         @media (max-width: 600px) {
             #image {
-                max-height: 200px; /* Mobil cihazlarda resim önizleme alanını daha da küçültme */
+                max-height: 200px;
             }
         }
     </style>
@@ -114,8 +114,10 @@
                     cropper = new Cropper(image, {
                         aspectRatio: 1,
                         viewMode: 1,
-                        cropBoxWidth: 200, /* Kırpma alanının başlangıç genişliğini belirleme */
-                        cropBoxHeight: 200, /* Kırpma alanının başlangıç yüksekliğini belirleme */
+                        cropBoxWidth: 200,
+                        cropBoxHeight: 200,
+                        checkOrientation: false,
+                        responsive: true,
                     });
                 };
                 reader.readAsDataURL(e.target.files[0]);
